# PowerPoint-Automation

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  CODEOWNERS  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: python-publish.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt
powerpoint_automation/: __init__.py  main.py
powerpoint_automation/logic/: __init__.py  add_git_info.py  add_meta_data.py  convert_presentations.py  create_txt_for_powerpoint.py  remove_picture.py
