# SPDX-FileCopyrightText: 2022 Patrick Stöckle.
# SPDX-License-Identifier: Apache-2.0
[tool.poetry]
name = "powerpoint-automation"
version = "0.1.10"
description = "Scripts to automate some task in the context of PowerPoint."
authors = ["Patrick Stöckle <patrick.stoeckle@posteo.de>"]
maintainers = ["Patrick Stöckle <patrick.stoeckle@posteo.de>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/pstoeckle/PowerPoint-Automation.git"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
python-pptx = "^0.6.21"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
reuse = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
powerpoint-automation = 'powerpoint_automation.main:app'
